<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/logIn"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/light_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Enter your email"
        android:background="@drawable/inputtxt_bg"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableStart="@drawable/ic_email"
        android:paddingStart="5dp"
        android:drawablePadding="5dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:text="@string/password"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:background="@drawable/inputtxt_bg"
        android:drawableStart="@drawable/ic_pwd"
        android:paddingStart="5dp"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/imgShowHide"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintRight_toRightOf="@id/edtPassword"
        app:layout_constraintTop_toTopOf="@id/edtPassword"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        android:onClick="ShowHidePwd"
        android:layout_marginEnd="4dp"
        android:src="@drawable/hide_pwd"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/btnlogIn"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <TextView
        android:id="@+id/newMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New member??"
        android:textColor="@color/light_white"
        android:textSize="24sp"
        android:paddingStart="28dp"
        android:layout_marginStart="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/registerHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerHere"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/newMember"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>