<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/scrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/reg_bg"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >


    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registration"
        android:textColor="@color/light_white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/inputtxt_bg"
        android:drawableStart="@drawable/ic_fname"

        android:drawablePadding="5dp"
        android:hint="Enter your fullname"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

<!--    <TextView-->
<!--        android:id="@+id/userName"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="60dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="Username"-->
<!--        android:textColor="@color/light_white"-->
<!--        android:textSize="22sp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/edtFullName" />-->

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/inputtxt_bg"

        android:drawableStart="@drawable/ic_uname"
        android:drawablePadding="5dp"
        android:hint="Enter your username"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtFullName"

        />

<!--    <TextView-->
<!--        android:id="@+id/email"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="60dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:text="@string/email"-->
<!--        android:textColor="@color/light_white"-->
<!--        android:textSize="22sp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/edtUserName" />-->

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/inputtxt_bg"

        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUserName" />



<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/edtPassword"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/edtEmail"-->
<!--        android:hint="Enter your password"-->
<!--        >-->

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="45dp"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:background="@drawable/inputtxt_bg"-->
<!--        android:drawableStart="@drawable/ic_pwd"-->
<!--        android:drawablePadding="5dp"-->

<!--        android:paddingStart="5dp"-->
<!--        android:inputType="textPassword"-->
<!--        />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->




    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/inputtxt_bg"

        android:drawableStart="@drawable/ic_pwd"
        android:drawablePadding="5dp"
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

<!--    <TextView-->
<!--        android:id="@+id/showHidePassword"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="36dp"-->
<!--        android:layout_marginEnd="2.5dp"-->
<!--        android:background="@color/grey"-->
<!--        android:text="Show"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="22sp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/edtPassword"-->
<!--        app:layout_constraintRight_toRightOf="@+id/edtPassword"-->

<!--        app:layout_constraintTop_toTopOf="@id/edtPassword" />-->

    <ImageView
        android:id="@+id/imgShowHide"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="4dp"
        android:onClick="ShowHidePwd"
        android:src="@drawable/hide_pwd"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        app:layout_constraintRight_toRightOf="@id/edtPassword"
        app:layout_constraintTop_toTopOf="@id/edtPassword" />


    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_bg"

        android:drawableStart="@drawable/ic_pwd"
        android:drawablePadding="5dp"
        android:hint="Confirm your password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <ImageView
        android:id="@+id/imgShowHideConf"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="4dp"
        android:onClick="ShowHideConfPwd"
        android:src="@drawable/hide_pwd"
        app:layout_constraintBottom_toBottomOf="@id/edtConfirmPassword"
        app:layout_constraintRight_toRightOf="@id/edtConfirmPassword"
        app:layout_constraintTop_toTopOf="@id/edtConfirmPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:elevation="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        android:text="OR,"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />

    <TextView
        android:id="@+id/alreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="6dp"
        android:text="Already registered??"
        android:textColor="@color/light_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/loginHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/loginHere"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/alreadyRegistered" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>